--- a/style.css
+++ b/style.css
@@ -348,13 +348,16 @@ i {
 
 .item ul {
     display: flex;
-    gap: 15px;
+    gap: 35px;
     list-style-type: disc;
     border: none;
-    font-size: 15px;
+    font-size: 12px;
     font-weight: 400;
     display: flex;
     flex-wrap: wrap;
+    margin: 0;
+    padding: 10px;
+    margin-bottom: -10px;
 }
 
 .item li {
