--- a/style.css
+++ b/style.css
@@ -218,6 +218,56 @@ a {
     justify-content: center;
 }
 
+.button-final {
+    background-color: transparent;
+    border: .5px solid black;
+    border-radius: 0.5rem;
+    width: 30px;
+    padding: 6px;
+    padding-top: 0;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 40px;
+}
+
+.read {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 170px;
+}
+
+.read-label {
+    font-size: 12px;
+    font-weight: 400;
+    margin-bottom: 50px;
+}
+
+.button-final-2 {
+    background-color: transparent;
+    border: .5px solid black;
+    border-radius: 0.5rem;
+    width: 30px;
+    padding: 6px;
+    padding-top: 0;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 40px;
+}
+
+.read-2 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 140px;
+}
+
+.read-label-2 {
+    font-size: 12px;
+    font-weight: 400;
+    margin-bottom: 50px;
+}
+
 .hero {
     display: flex;
     flex-direction: column;
