--- a/style.css
+++ b/style.css
@@ -382,9 +382,42 @@ i {
     font-weight: 400;
 }
 
+.logo-grid-2 {
+    display: grid;
+    grid-template-columns: 1fr 3.5fr 2fr;
+    text-align: center;
+    align-items: center;
+    border-collapse: collapse;
+    width: 230px;
+    font-size: 30px;
+    font-weight: 400;
+}
+
 .item1, .item2, .item3 {
     border: 1px solid black;
     border-radius: 0.25rem;
+}
+
+.item1-2, .item2-2, .item3-2 {
+    border: 1px solid white;
+    border-radius: 0.25rem;
+    margin-bottom: 135px;
+}
+
+.logo-grid-2 a {
+    color: white !important;
+}
+
+.item2-2, .item3-2 {
+    padding: 5px
+}
+
+.logo-2 {
+    display: flex;
+    max-width: 35px;
+    align-items: center;
+    justify-content: center;
+    margin: 5px;
 }
 
 .logo {
@@ -512,7 +545,7 @@ i {
 
 .itemm {
     border: .5px solid white;
-    border-radius: 1rem;
+    border-radius: .5rem;
 }
 
 .itemm1 {
