--- a/style.css
+++ b/style.css
@@ -532,6 +532,7 @@ i {
     border-radius: 1rem;
     margin-left: 20px;
     margin-right: 20px;
+    margin-top: 200px;
 }
 
 .footer-grid {
@@ -541,6 +542,17 @@ i {
     grid-template-columns: 2fr 1fr 1fr 2fr 2fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-auto-flow: dense;
+    font-size: 10px;
+    margin-bottom: 0;
+    font-weight: 300;
+}
+
+.texxt {
+    margin-top: 90px;
+}
+
+.textt {
+    margin-top: 30px;
 }
 
 .itemm {
@@ -549,34 +561,65 @@ i {
 }
 
 .itemm1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     grid-column: span 1;
     grid-row: span 3;
 }
 
+.itemm2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.itemm3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .itemm4 {
     grid-column-start: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .itemm5 {
     grid-column-start: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .itemm6 {
     grid-column-start: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .itemm7 {
     grid-column-start: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .itemm8 {
     grid-column-start: 4;
     grid-row-start: 1;
     grid-row: span 3;
+    padding: 10px;
+    padding-left: 20px;
 }
 
 .itemm9 {
     grid-column-start: 5;
     grid-row-start: 1;
     grid-row: span 3;
+    padding: 10px;
+    padding-left: 20px;
 }
