--- a/components/components.html
+++ b/components/components.html
@@ -173,12 +173,12 @@
                 <div class="itemm itemm7">NEWS</div>
                 <div class="itemm itemm8">
                     <p>CONTACT US</p>
-                    <p class="texxt">press@isomorphiclabs</p>
+                    <p class="text-3">press@isomorphiclabs</p>
                     <p>connecting@isomorphiclabs</p>
                 </div>
                 <div class="itemm itemm9">
                     <p>INFO</p>
-                    <p class="textt">Privacy Policy</p>
+                    <p class="text-4">Privacy Policy</p>
                     <p>Cookie Policy</p>
                     <p>Terms & Conditions</p>
                     <p>Supplier Code of Conduct</p>
